resolved comments, stored api key in env and made code more readable and cosize

--- a/src/Components/LeftSideWeatherApp/CurrentDayWeatherForecast/CurrentDayWeatherForecast.css
+++ b/src/Components/LeftSideWeatherApp/CurrentDayWeatherForecast/CurrentDayWeatherForecast.css
@@ -18,3 +18,8 @@
     font-size: 30px;
     font-weight: 300;
 }
+
+.deg {
+    font-weight: lighter;
+    font-size: smaller;
+}
